@@ -34,7 +34,7 @@
 #include <linux/fs.h>
 #include <redirfs.h>
 
-#define AVFLT_VERSION	"0.4"
+#define AVFLT_VERSION	"0.5"
 
 #define AVFLT_EVENT_OPEN	1
 #define AVFLT_EVENT_CLOSE	2
@@ -58,6 +58,7 @@ struct avflt_event {
 	int fd;
 	int root_cache_ver;
 	int cache_ver;
+	int cache;
 	pid_t pid;
 	pid_t tgid;
 };
