@@ -5,6 +5,14 @@ version 0.5
 	- proper canceling of pending requests when application is unregistered
 	  form avflt
 	  thanks to Timo Metsala <timo.metsala@f-secure.com>
+	- user-space <==> kernel protocol extended for cache option
+	  0 - do not cache cache event result
+	  1 - cache event result
+	  This is intended to be used by the user-space anti-virus applications
+	  when a file cannot be scanned or when an error occurred during scan.
+	  In this case application can allow or deny access to the file and it
+	  should set the result to not be cached. Next time the file is accessed
+	  it is send again for scan instead of returning result from cache.
 
 version 0.4
 	* Frantisek Hrbata <frantisek.hrbata@redirfs.org>
